[package]
name = "rustedserver"
version = "0.1.0"
authors = ["Rafael Fillipe Silva <silva.rafaelfillipe@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
mlua = "0.3.2"
serde = { version = "1.0.111", features = ["derive"] }
tracing = "0.1.14"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.5"
thiserror = "1.0.19"
tokio = { version = "0.2.21", features = ["blocking", "fs", "macros", "rt-core", "rt-threaded", "sync"] }
toml = "0.5.6"
