[package]
name = "rustedserver"
version = "0.1.0"
authors = ["Rafael Fillipe Silva <silva.rafaelfillipe@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
mlua = "0.3.2"
percent-encoding = "2.1.0"
serde = { version = "1.0.111", features = ["derive"] }
sqlx = { version = "0.3.5", default-features = false, features = ["runtime-tokio", "macros", "mysql"] }
thiserror = "1.0.19"
tokio = { version = "0.2.21", features = ["blocking", "fs", "macros", "rt-core", "rt-threaded", "sync"] }
toml = "0.5.6"
tracing = "0.1.14"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.5"
url = "2.1.1"
validator = "0.10.0"
validator_derive = "0.10.0"
